--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
+        android:layout_below="@+id/tabs"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="0px"/>
+        android:layout_height="match_parent"/>
 </RelativeLayout>
